@@ -1,3 +1,14 @@
+2012-04-26  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK] Build and run TestWebKitAPI WebKit2 unit tests
+        https://bugs.webkit.org/show_bug.cgi?id=84446
+
+        Reviewed by Philippe Normand.
+
+        * gtest/GNUmakefile.am: Do not build libgtestmain anymmore since
+        all tests use now a custom main to make sure WTF threads are
+        initialized.
+
 2012-04-24  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Build and run TestWebKitAPI unit tests
